fix: body keep scrolling when menu is open on iphone

--- a/src/scss/drawerr.scss
+++ b/src/scss/drawerr.scss
@@ -1,8 +1,13 @@
 @import "variables";
 
-body.drawerr-no-scroll {
-	height: 100%;
-	overflow: hidden;
+html {
+	height:100%;
+	overflow:hidden;
+}
+
+body {
+	height:100%;
+	overflow:auto;
 }
 
 .drawerr {
